--- a/index.html
+++ b/index.html
@@ -529,14 +529,14 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://www.eduxoncabs.com/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/Eduxon-Cars.png" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Eduxoncabs</h3>
@@ -547,14 +547,14 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://zerobyte.in/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/Zerobyte-web.png" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Zerobyte</h3>
