--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/icon-app.svg" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
