--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <h4 class="h4 service-item-title">IT Consulting</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  I build high-quality technology product.
                 </p>
               </div>
 
